--- a/webapp/src/app/shared/table/table.component.html
+++ b/webapp/src/app/shared/table/table.component.html
@@ -97,6 +97,7 @@
                         [mat-sort-header]="
                             column !== 'Actions' && column !== 'DetailsBtn' ? column : false
                         "
+                        [class.hide-sort-arrow-wrapper]="doNotSort || column == 'Actions' || column == 'DetailsBtn'"
                     >
                         <span>
                             {{ column !== 'Actions' && column !== 'DetailsBtn' ? column : '' }}
