feat(table-filters): removing filter chip

--- a/webapp/src/app/shared/table-filters/table-filters.component.html
+++ b/webapp/src/app/shared/table-filters/table-filters.component.html
@@ -3,6 +3,7 @@
         <app-table-filter-item
             [name]="item"
             [filterValues]="appliedFiltersDict[item]"
+            (clearFilter)="clearFilter($event)"
         ></app-table-filter-item>
     </div>
 </div>
