--- a/webapp/src/app/shared/table-filters/table-filter-item/table-filter-item.component.html
+++ b/webapp/src/app/shared/table-filters/table-filter-item/table-filter-item.component.html
@@ -17,6 +17,7 @@
     cdkConnectedOverlay
     [cdkConnectedOverlayOrigin]="filterMenu"
     [cdkConnectedOverlayOpen]="isFilterMenuShown"
+    (overlayOutsideClick)="isFilterMenuShown = false"
 >
     <ul class="filter-item-menu mat-elevation-z4">
         <li>
