--- a/webapp/src/app/shared/table-filters/table-filters.component.html
+++ b/webapp/src/app/shared/table-filters/table-filters.component.html
@@ -24,6 +24,7 @@
     cdkConnectedOverlay
     [cdkConnectedOverlayOrigin]="filterMenuBtn"
     [cdkConnectedOverlayOpen]="isFilterMenuOpen"
+    (overlayOutsideClick)="isFilterMenuOpen = false"
 >
     <ul class="filters-category-menu mat-elevation-z4">
         <li>
