fix(table-filter): handling escape button

--- a/webapp/src/app/shared/table-filters/table-filter-item/table-filter-item.component.html
+++ b/webapp/src/app/shared/table-filters/table-filter-item/table-filter-item.component.html
@@ -18,6 +18,7 @@
     [cdkConnectedOverlayOrigin]="filterMenu"
     [cdkConnectedOverlayOpen]="isFilterMenuShown"
     (overlayOutsideClick)="isFilterMenuShown = false"
+    (overlayKeydown)="overlayKeyDown($event)"
 >
     <ul class="filter-item-menu mat-elevation-z4">
         <li>
