--- a/webapp/src/app/shared/table-filters/table-filters.component.html
+++ b/webapp/src/app/shared/table-filters/table-filters.component.html
@@ -28,22 +28,30 @@
     (overlayKeydown)="overlayKeyDown($event)"
 >
     <ul class="filters-category-menu mat-elevation-z4">
-        <li>
-            <input type="text" placeholder="Search" />
-        </li>
         <ng-container *ngIf="!isFilterSubCategoryOpen">
-            <li *ngFor="let filter of filters" (click)="openFilterCategory(filter)">
-                {{ filter.name }}
+            <li>
+                <app-table-filter-search [(text)]="categoryFilterQuery"></app-table-filter-search>
+            </li>
+            <li
+                *ngFor="let category of filterCategoryByQuery()"
+                (click)="openFilterCategory(category)"
+            >
+                {{ category.name }}
             </li>
         </ng-container>
 
         <ng-container *ngIf="isFilterSubCategoryOpen">
-            <li *ngFor="let filter of selectedFilterCategory?.children">
+            <li>
+                <app-table-filter-search
+                    [(text)]="categoryChildFilterQuery"
+                ></app-table-filter-search>
+            </li>
+            <li *ngFor="let childFilter of filterSelectedCategoryChildrenByQuery()">
                 <mat-checkbox
-                    [checked]="appliedFiltersDict[selectedFilterCategory.name][filter]"
-                    (change)="applyFilter(filter, $event)"
+                    [checked]="appliedFiltersDict[selectedFilterCategory.name][childFilter]"
+                    (change)="applyFilter(childFilter, $event)"
                 >
-                    {{ filter }}
+                    {{ childFilter }}
                 </mat-checkbox>
             </li>
         </ng-container>
