feat(table-filters): layout adjusments

--- a/webapp/src/app/shared/table-filters/table-filter-item/table-filter-item.component.html
+++ b/webapp/src/app/shared/table-filters/table-filter-item/table-filter-item.component.html
@@ -1,5 +1,9 @@
-<div class="flex flex-align-center table-filter-item">
-    <div (click)="toggleFilterMenu()" cdkOverlayOrigin #filterMenu="cdkOverlayOrigin">
+<div
+    class="flex flex-align-center table-filter-item"
+    cdkOverlayOrigin
+    #filterMenu="cdkOverlayOrigin"
+>
+    <div (click)="toggleFilterMenu()">
         <span class="tfi-name"> {{ category }}:&nbsp;</span>
 
         <span class="tfi-value">
