feat(table-filters): intial table update for new filters compatibility

--- a/webapp/src/app/pacman-features/modules/notifications/cloud-notifications/cloud-notifications.component.html
+++ b/webapp/src/app/pacman-features/modules/notifications/cloud-notifications/cloud-notifications.component.html
@@ -8,42 +8,44 @@
         <div class="flex flex-col full-height cloud-notifications-wrap">
             <div class="flex flex-col full-height data-table-container">
                 <div class="relative table-wrapper">
-                    <app-table (deleteFilters)="deleteFilters($event)"
-                               (downloadClicked)="handlePopClick($event)"
-                               (nextPageCalled)="nextPg($event)"
-                               (rowSelectEventEmitter)="goToDetails($event)"
-                               (searchCalledEventEmitter)="callNewSearch($event)"
-                               (selectedFilter)="changeFilterTags($event)"
-                               (selectedFilterType)='changeFilterType($event)'
-                               [centeredColumns]="centeredColumns"
-                               [columnWidths]="columnWidths"
-                               [data]="tableData"
-                               [direction]="direction"
-                               [doLocalFilter]="false"
-                               [doLocalSearch]="false"
-                               [filterTagLabels]="filterTagLabels"
-                               [filterTypeLabels]="filterTypeLabels"
-                               [filterTypeOptions]="filterTypeOptions"
-                               [filteredArray]="filters"
-                               [headerColName]="headerColName"
-                               [onScrollDataLoader]="onScrollDataLoader"
-                               [rowClickable]="true"
-                               [rowSize]="'SM'"
-                               [searchQuery]="searchTxt"
-                               [showAddRemoveCol]="true"
-                               [showDownloadBtn]="true"
-                               [showFilterBtn]="true"
-                               [showMoreMenu]="true"
-                               [showSearchBar]="true"
-                               [tableDataLoaded]="tableDataLoaded"
-                               [tableErrorMessage]="tableErrorMessage"
-                               [tableScrollTop]="tableScrollTop"
-                               [totalRows]="totalRows"
-                               [whiteListColumns]="whiteListColumns"
-                               (headerColNameSelected)="handleHeaderColNameSelection($event)"
-                               style="height: 100%; width: 100%;"
-                               (whitelistColumnsChanged)="handleWhitelistColumnsChange($event)"
-                               [selectedRowIndex]="selectedRowIndex">
+                    <app-table
+                        (deleteFilters)="deleteFilters($event)"
+                        (downloadClicked)="handlePopClick($event)"
+                        (nextPageCalled)="nextPg($event)"
+                        (rowSelectEventEmitter)="goToDetails($event)"
+                        (searchCalledEventEmitter)="callNewSearch($event)"
+                        (selectedFilter)="changeFilterTags($event)"
+                        (selectedFilterType)="changeFilterType($event)"
+                        [centeredColumns]="centeredColumns"
+                        [columnWidths]="columnWidths"
+                        [data]="tableData"
+                        [direction]="direction"
+                        [doLocalFilter]="false"
+                        [doLocalSearch]="false"
+                        [filterTagLabels]="filterTagLabels"
+                        [filterTypeLabels]="filterTypeLabels"
+                        [filterTypeOptions]="filterTypeOptions"
+                        [filteredArray]="filters"
+                        [headerColName]="headerColName"
+                        [onScrollDataLoader]="onScrollDataLoader"
+                        [rowClickable]="true"
+                        [rowSize]="'SM'"
+                        [searchQuery]="searchTxt"
+                        [showAddRemoveCol]="true"
+                        [showDownloadBtn]="true"
+                        [showFilterBtn]="true"
+                        [showMoreMenu]="true"
+                        [showSearchBar]="true"
+                        [tableDataLoaded]="tableDataLoaded"
+                        [tableErrorMessage]="tableErrorMessage"
+                        [tableScrollTop]="tableScrollTop"
+                        [totalRows]="totalRows"
+                        [whiteListColumns]="whiteListColumns"
+                        (headerColNameSelected)="handleHeaderColNameSelection($event)"
+                        style="height: 100%; width: 100%"
+                        (whitelistColumnsChanged)="handleWhitelistColumnsChange($event)"
+                        [selectedRowIndex]="selectedRowIndex"
+                    >
                     </app-table>
                 </div>
             </div>
