--- a/webapp/src/app/shared/table-filters/table-filters.component.html
+++ b/webapp/src/app/shared/table-filters/table-filters.component.html
@@ -1,4 +1,4 @@
-<div class="flex applied-filters-container gap-16">
+<div class="applied-filters-container flex flex-wrap gap-16">
     <app-table-filter-item
         *ngFor="let category of appliedFilters"
         [category]="category"
