--- a/webapp/src/app/shared/table/table.component.css
+++ b/webapp/src/app/shared/table/table.component.css
@@ -36,7 +36,7 @@
 
 .table-header .table-column-modifier{
     border: 1px solid var(--border-100);
-    height: 64px;
+    /* height: 64px; */
     padding: 12px 19px 12px 24px;
     align-items: center;
 }
@@ -276,8 +276,8 @@
 
 .filters-section{
   position: relative;
-  background-color: white; 
-  padding: 12px 16px; 
+  background-color: white;
+  padding: 12px 16px;
   align-items: baseline;
 }
 
@@ -443,8 +443,8 @@ tr.mat-header-row{
 }
 
 .triangle {
-  width: 0; 
-  height: 0; 
+  width: 0;
+  height: 0;
   border-left: 6px solid transparent;
   border-right: 6px solid transparent;
   border-bottom: 12px solid;
