--- a/webapp/src/app/shared/table/table.component.html
+++ b/webapp/src/app/shared/table/table.component.html
@@ -1,26 +1,55 @@
 <div #tableContainer class="table-container flex flex-col">
     <div class="flex" [style.flex-direction]="tableTitle?'column-reverse':'column'">
-        <div class="new-filter-wrapper" *ngIf="showFilterBtn" [style.padding-bottom]="tableTitle?'0px':(gapBetweenFilterAndTable!=undefined)?gapBetweenFilterAndTable:'20px'">
+        <div
+            class="new-filter-wrapper"
+            *ngIf="showFilterBtn"
+            [style.padding-bottom]="
+                tableTitle
+                    ? '0px'
+                    : gapBetweenFilterAndTable != undefined
+                    ? gapBetweenFilterAndTable
+                    : '20px'
+            "
+        >
             <div class="filters-section flex flex-row gap-16">
                 <div class="menu-wrapper flex gap-8 flex-wrap" *ngIf="filteredArray.length">
-                    <app-dropdown *ngFor="let filter of filteredArray; let i=index" [customLabel]="filter.keyDisplayValue+' :'" [items]="filterTagLabels[filter.keyDisplayValue]?filterTagLabels[filter.keyDisplayValue]:[]" [placeholder]="filter.keyDisplayValue+' :'"
-                    [selectedItem]="filter.filterValue" (selected)='onSelectFilter($event, i)'></app-dropdown>
+                    <app-dropdown
+                        *ngFor="let filter of filteredArray; let i = index"
+                        [customLabel]="filter.keyDisplayValue + ' :'"
+                        [items]="
+                            filterTagLabels[filter.keyDisplayValue]
+                                ? filterTagLabels[filter.keyDisplayValue]
+                                : []
+                        "
+                        [placeholder]="filter.keyDisplayValue + ' :'"
+                        [selectedItem]="filter.filterValue"
+                        (selected)="onSelectFilter($event, i)"
+                    ></app-dropdown>
                 </div>
-                <div class="flex flex-row gap-8 flex-align-center filters-button-wrapper" style="margin-left: auto;">                
-                        <app-dropdown 
-                            style="width: 90px;padding: 0px 8px 1px;" 
-                            [isDisabled]="false"
-                            [items]="filterTypeLabels"
-                            [isMultiSelect]="true"
-                            [selectedList]="selectedFiltersList"
-                            [isChipListEnabled]="true"
-                            (optionClicked)="filterOptionClick($event)"
-                            [buttonLabel]="'Filters'"
-                            [isButton]="true"
-                            (openEventEmitter)="handleFilterDropdownOpen()">
-                        </app-dropdown>
-                    <hr style="height: 25px">
-                    <app-text (click)="removeAllFilters()" text="Clear All" classNames="body-2 primary-400 pointer" style="width: max-content"></app-text>
+                <div
+                    class="flex flex-row gap-8 flex-align-center filters-button-wrapper"
+                    style="margin-left: auto"
+                >
+                    <app-dropdown
+                        style="width: 90px; padding: 0px 8px 1px"
+                        [isDisabled]="false"
+                        [items]="filterTypeLabels"
+                        [isMultiSelect]="true"
+                        [selectedList]="selectedFiltersList"
+                        [isChipListEnabled]="true"
+                        (optionClicked)="filterOptionClick($event)"
+                        [buttonLabel]="'Filters'"
+                        [isButton]="true"
+                        (openEventEmitter)="handleFilterDropdownOpen()"
+                    >
+                    </app-dropdown>
+                    <hr style="height: 25px" />
+                    <app-text
+                        (click)="removeAllFilters()"
+                        text="Clear All"
+                        classNames="body-2 primary-400 pointer"
+                        style="width: max-content"
+                    ></app-text>
                 </div>
             </div>
         </div>
@@ -36,7 +65,7 @@
                             placeholder="Search"
                             class="search-bar-cursor"
                         />
-    
+
                         <img
                             class="padding-12 pointer"
                             src="/assets/icons/x-circle.svg"
@@ -47,6 +76,7 @@
                         />
                     </div>
                 </div>
+                <app-table-filters style="flex: 1" [filters]="tableFilters"></app-table-filters>
                 <div class="flex flex-align-center gap-24">
                     <div class="flex flex-align-center gap-24" *ngIf="tableTitle">
                         <app-text [text]="tableTitle" classNames="body-2 high-emphasis" ></app-text>
@@ -58,7 +88,7 @@
                     </div>
                 </div>
                 <div class="header-right flex flex-row gap-24">
-                    <app-dropdown 
+                    <app-dropdown
                         class="add-remove-columns-wrapper"
                         *ngIf="showAddRemoveCol"
                         [isDisabled]="false"
@@ -129,8 +159,8 @@
                                  [class.row-title]="element[column].isLink" class="nowrap-ellipsis" [class.pointer]="element[column].link"
                                  [title]="element[column].isDate?(element[column].text | date: 'medium'):element[column].text">
                                     <img *ngIf="element[column].imgSrc" [class.noImg]="element[column].imgSrc=='noImg'" style="vertical-align: text-bottom; height: 16px; width: 24px; padding-right: 8px;"
-                                         src="/assets/icons/{{element[column].imgSrc}}.svg" title="{{element[column].imageTitleText??element[column].titleText}}"> 
-                                       <span *ngIf="!element[column].isDate && !element[column].isNumber"> {{ element[column].text }} </span> 
+                                         src="/assets/icons/{{element[column].imgSrc}}.svg" title="{{element[column].imageTitleText??element[column].titleText}}">
+                                       <span *ngIf="!element[column].isDate && !element[column].isNumber"> {{ element[column].text }} </span>
                                        <span *ngIf="element[column].isDate">{{element[column].text | date: 'medium'}}</span>
                                        <span *ngIf="element[column].isNumber">{{element[column].text | number}}</span>
                                     <div *ngIf="element[column].symbol" class="symbol" [class]="element[column].symbol.type" [style.background-color]="element[column].symbol.type!='triangle'?element[column].symbol.color:''" [style.border-bottom-color]="element[column].symbol.type=='triangle'?element[column].symbol.color:''"></div>
